--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,27 +6,27 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme {
-  --font-sans: var(--font-geist-sans), ui-sans-serif, system-ui, sans-serif,
+  --font-sans:
+    var(--font-geist-sans), ui-sans-serif, system-ui, sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --color-primary-blue: #27214F;
-  --color-secondary-blue: #423C7A;
-  --color-old-matcha: #8F9880;
-  --color-cold-metals: #C6C6C6;
-  --color-creamy-white: #F5EDCE;
-  --color-pink-orange: #F99E90;
-  --color-metal: #A69D9D;
-  --color-purple-sky: #BEB8E6;
-  --color-light-purple-sky: #EEECFF;
-  --color-sea-blue: #005DC8;
-  --color-sky-blue: #339BF1;
-  --color-grass-green: #35C800;
-
+  --color-primary-blue: #27214f;
+  --color-secondary-blue: #423c7a;
+  --color-old-matcha: #8f9880;
+  --color-cold-metals: #c6c6c6;
+  --color-creamy-white: #f5edce;
+  --color-pink-orange: #f99e90;
+  --color-metal: #a69d9d;
+  --color-purple-sky: #beb8e6;
+  --color-light-purple-sky: #eeecff;
+  --color-sea-blue: #005dc8;
+  --color-sky-blue: #339bf1;
+  --color-grass-green: #35c800;
 }
 @utility text-shadow-custom {
   text-shadow: 7px 5px 12px #000000;
 }
 @utility box-shadow-custom {
-   box-shadow: 0px 0px 40px #000000;
+  box-shadow: 0px 0px 40px #000000;
 }
 
 @layer utilities {
@@ -46,7 +46,6 @@
   .scrollbar-custom::-webkit-scrollbar-thumb:hover {
     background: #A69D9D;
   } */
-  
 
   .scrollbar-custom-home::-webkit-scrollbar {
     width: 10px;
@@ -54,7 +53,7 @@
   }
 
   .scrollbar-custom-home::-webkit-scrollbar-thumb {
-    background: #A69D9D; 
+    background: #a69d9d;
   }
 
   .scrollbar-custom-home::-webkit-scrollbar-track {
@@ -101,7 +100,6 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
-
 }
 
 :root {
@@ -137,7 +135,6 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
-
 }
 
 .dark {
@@ -172,23 +169,16 @@
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
-
 }
 
 @layer base {
   * {
     @apply border-border outline-ring/50;
-
   }
   body {
     @apply bg-background text-foreground;
-
   }
-
 }
-
-
-
 
 .hover\:scale-102:hover {
   transform: scale(1.02);
